# edgequake-llm

./: .gitignore  .ignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  audit.toml  rustfmt.toml  tarpaulin-report.json
.cargo/: audit.toml
.github/ISSUES/: 000-add-mistral-provider.md
.github/workflows/: ci.yml  publish.yml  python-ci.yml  python-publish.yml
docs/: architecture.md  caching.md  cost-tracking.md  faq.md  local-ci.md  migration-guide.md  observability.md  performance-tuning.md  provider-families.md  providers.md  rate-limiting.md  release-cycle.md  releasing.md  reranking.md  security.md  testing.md
docs/provider/gemini/: gap-analysis.md
docs/provider/mistral/: README.md  gap-analysis.md
docs/providers/gemini/: README.md  gap-analysis.md
docs/providers/mistral/: README.md  gap-analysis.md  live-models-2026-04-23.md
docs/providers/nvidia/: README.md  first-principles.md
edgequake-litellm/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
edgequake-litellm/examples/: 01_basic_completion.py  02_async_completion.py  03_streaming.py  04_tool_calling.py  05_embeddings.py  06_drop_in_litellm_replacement.py  07_ollama_local.py  08_multimodal_gemini.py  09_azure_openai.py  README.md
edgequake-litellm/python/edgequake_litellm/: __init__.py  _compat.py  _elc_core.pyi  _types.py  completion.py  config.py  embedding.py  exceptions.py  streaming.py
edgequake-litellm/src/: bridge.rs  completion.rs  embedding.rs  lib.rs  types.rs
edgequake-litellm/tests/: __init__.py  conftest.py  test_completion_unit.py  test_e2e_anthropic.py  test_e2e_gemini.py  test_e2e_mistral.py  test_e2e_ollama.py  test_e2e_openai.py  test_e2e_openrouter.py  test_e2e_xai.py  test_embedding_unit.py  test_exceptions.py  test_litellm_compat.py  test_streaming_unit.py
edgequake-python/: Cargo.toml  README.md  pyproject.toml
edgequake-python/python/edgequake_python/: __init__.py  _eq_core.pyi  _types.py  completion.py  config.py  embedding.py  exceptions.py  streaming.py
edgequake-python/src/: lib.rs  types.rs
edgequake-python/tests/: __init__.py  conftest.py  test_completion_unit.py  test_e2e_anthropic.py  test_e2e_openai.py  test_embedding_unit.py  test_exceptions.py  test_litellm_compat.py  test_streaming_unit.py
examples/: README.md  basic_completion.rs  chatbot.rs  cost_tracking.rs  embeddings.rs  local_llm.rs  middleware.rs  mistral_chat.rs  multi_provider.rs  reranking.rs  retry_handling.rs  streaming_chat.rs  tool_calling.rs  vision.rs
examples/advanced/: cost_tracking.rs  middleware.rs  multi_provider.rs
examples/azure/: env_check.rs  full_demo.rs
examples/gemini/: chat.rs  demo.rs  embeddings.rs  streaming.rs  tool_calling.rs  vision.rs
examples/nvidia/: chat.rs
examples/openai/: basic_completion.rs  chatbot.rs  demo.rs  embeddings.rs  streaming.rs  tool_calling.rs  vision.rs
examples/vertexai/: chat.rs  demo.rs  embeddings.rs  streaming.rs  tool_calling.rs  vision.rs
litellm_study/: 01-litellm-deep-dive.md  02-architecture.md  03-api-design.md  04-pyo3-bindings.md  05-implementation-plan.md  06-pypi-publishing.md  07-roadblocks.md  08-compatibility-matrix.md  09-dx-improvements.md  README.md
logs/: 2025-07-24-schema-utils-strict-budget-fix.md  2026-02-19-00-00-beastmode-fix-vision-llm-log.md  2026-02-19-14-30-beastmode-ci-fixes-log.md  2026-02-19-15-00-beastmode-mistral-ci-publish-log.md  2026-02-20-09-00-beastmode-edgequake-python-build-log.md  2026-02-20-10-00-beastmode-e2e-tests-examples-log.md  2026-02-20-11-00-beastmode-hn-submit-log.md  2026-02-20-13-00-beastmode-ci-fix-publish-log.md  2026-02-20-litellm-study-log.md  2026-02-21-00-00-beastmode-async-openai-033-upgrade-log.md  2026-02-21-fix-flaky-test-from-env-fallback-to-mock.md  2026-02-21-resume-examples-readme-tests-log.md  2026-02-21-resume-flaky-test-docs-litellm-azure.md  2026-02-22-12-40-beastmode-publication-verification-log.md  2026-02-23-12-00-beastmode-chatmode-log.md  2026-02-23-13-00-beastmode-publish-complete-log.md  2026-02-23-13-30-beastmode-gemini-vertexai-examples-log.md  2026-03-01-10-00-beastmode-release-v029-log.md  2026-03-01-13-30-beastmode-bedrock-e2e-fixes-log.md  2026-03-01-16-00-beastmode-chatmode-log.md  2026-03-02-10-00-beastmode-bedrock-full-coverage-log.md  2026-04-20-10-12-beastmode-chatmode-log.md  2026-04-20-10-27-beastmode-chatmode-log.md
scripts/: ci-local.sh
specs/: 001-document-and-test.md
specs/001-document-and-test/ooda_loop/iteration_01/: act.md  decide.md  observe.md  orient.md
specs/001-document-and-test/ooda_loop/iteration_02/: act.md  decide.md  observe.md  orient.md
specs/001-document-and-test/ooda_loop/iteration_03/: act.md  decide.md  observe.md  orient.md
specs/001-document-and-test/ooda_loop/iteration_04/: act.md  (+3 more)
src/: cache.rs  cache_prompt.rs  cost_tracker.rs  error.rs  factory.rs  inference_metrics.rs  lib.rs  middleware.rs  model_config.rs  rate_limiter.rs  registry.rs  retry.rs  tokenizer.rs  traits.rs
src/imagegen/: error.rs  factory.rs  mod.rs  traits.rs  types.rs
src/imagegen/providers/: fal.rs  gcp.rs  gemini.rs  mock.rs  mod.rs  vertexai.rs
src/providers/: anthropic.rs  azure_openai.rs  bedrock.rs  gemini.rs  genai_events.rs  huggingface.rs  jina.rs  lmstudio.rs  mistral.rs  mock.rs  mod.rs  nvidia.rs  ollama.rs  openai.rs  openai_compatible.rs  openrouter.rs  schema_utils.rs  tracing.rs  xai.rs
src/providers/vscode/: auth.rs  client.rs  error.rs  mod.rs  stream.rs  token.rs  types.rs
src/reranker/: bi_encoder.rs  bm25.rs  config.rs  factory.rs  http.rs  hybrid.rs  mod.rs  result.rs  rrf.rs  term_overlap.rs  tests.rs  traits.rs
tests/: e2e_anthropic.rs  e2e_azure.rs  e2e_bedrock.rs  e2e_gemini.rs  e2e_imagegen.rs  e2e_llm_providers.rs  e2e_lmstudio_qwen.rs  e2e_lmstudio_vision.rs  e2e_mistral.rs  e2e_nvidia.rs  e2e_ollama_gemma4.rs  e2e_ollama_openai_compatible.rs  e2e_ollama_vision.rs  e2e_openai_033.rs  e2e_openai_api.rs  e2e_openai_compatible.rs  e2e_openai_gpt41.rs  e2e_provider_factory.rs  e2e_xai.rs  test_ollama_anthropic.rs  vscode_integration.rs
(+323 files in other folders)
